step 3. small fixings.